--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "dayjs": "^1.11.5",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -27,5 +29,11 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "child_process": false
   }
 }
