--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
-    "framer-motion": "^7.3.5",
     "@mui/x-date-pickers": "^5.0.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.11.5",
+    "framer-motion": "^7.3.5",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +35,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.8.3"
   },
   "browser": {
