--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "sweetalert2": "^11.4.33",
+    "sweetalert2-react-content": "^5.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
